--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,10 @@ repository = "https://github.com/cinarn/ductionary"
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.10,<3.12"
-numpy = "^1.24.2"
-scipy = "^1.10.1"
-json5 = "^0.9.11"
+python = "^3.9.13"
+numpy = "^1.21.5"
+scipy = "^1.9.1"
+json5 = "^0.9.6"
 
 
 [build-system]
